Add placeholder before gps is found

--- a/data/panel.html
+++ b/data/panel.html
@@ -19,6 +19,9 @@
 	<span class="history-links"></span>
 </div>
 	<div id="history">
+		<div id="history-placeholder">
+			<span>No GPS coordinates found yet.</span>
+		</div>
 	</div>
 </body>
 </html>
