--- a/panel.html
+++ b/panel.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="panel_style.css" type="text/css"/>
-	<script src="jquery.min.js"></script>
+	<script src="util.js"></script>
 	<script src="panel_script.js"></script>
 </head>
 <body>
